<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fire Tower</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="default_debug_command">100,1</string>


    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="default_address">A4:D5:78:0E:0A:4F</string>
    <string name="debug_mode">Debug</string>
    <string name="normal_mode">Normal</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_save">Save</string>
    <string name="menu_load">Load</string>
    <string name="menu_about">About</string>

    <!-- About box -->
    <string name="leybzon">Created By: Gene Leybzon\n http://www.leybzon.com</string>
    <string name="github">Source Code: https://github.com/leybzon/FireTower</string>

    <!-- File save dialog -->
    <string name="save_dialog_title">Save Patten</string>
    <string name="save_dialog_prompt">File Name</string>
</resources>
