<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_clear" android:title="@string/menu_clear"
        android:orderInCategory="200" app:showAsAction="never" />
    <item android:id="@+id/action_debug" android:title="@string/debug_mode"
        android:orderInCategory="300" app:showAsAction="never" />
    <item android:id="@+id/action_normal" android:title="@string/normal_mode"
        android:orderInCategory="400" app:showAsAction="never" />
    <item android:id="@+id/action_save" android:title="@string/menu_save"
        android:orderInCategory="500" app:showAsAction="never" />
    <item android:id="@+id/action_load" android:title="@string/menu_load"
        android:orderInCategory="600" app:showAsAction="never" />
    <item android:id="@+id/action_about" android:title="@string/menu_about"
        android:orderInCategory="1000" app:showAsAction="never" />
</menu>

